2005-12-07  Andy Wingo  <wingo@pobox.com>

	* conf/managers/default/planet.xml: Update config syntax.

2005-12-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/registry.py:
	  It has been pointed out to me that I can make the previous change 
	  specific to the single class in question rather than file-global.

2005-12-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/registry.py:
	  Tell pychecker to allow the 12-arg constructor in this file.

2005-12-07  Michael Smith  <msmith@fluendo.com>

	* common/pychecker.mk:
	  Fix pychecker macros to look for gstreamer 0.10 instead of 0.9 so we
	  actually check the blah09.py files.

2005-12-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/config.py:
	  Fix syntax in log call so that 'make check' passes again.

2005-12-06  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_config.py (TestConfig.testClockMasterAutoSelection) 
	(TestConfig.testClockMasterUserSelection) 
	(TestConfig.testClockMasterError): New testes.

	* flumotion/common/config.py (FlumotionConfigXML._parseFlow):
	Choose a default master clock if necessary, sorting by the clock
	priorities in the registry.

	* flumotion/test/test_config.py (TestConfig.testParseProperties):
	Test that clock-master defaults to False.

	* flumotion/common/config.py
	(FlumotionConfigXML._parseClockMaster): Parse out <clock-master>
	from a config.

	* flumotion/component/encoders/Makefile.am: Don't try to dist
	encoders.xml.

	* flumotion/test/test_registry.py (TestRegistry.testDump): Update
	dump test for default synchronization writeout.
	(TestComponentEntry.setUp): Add a couple tests.

	* flumotion/common/registry.py
	(RegistryEntryComponent.__init__)
	(RegistryParser._parseSynchronization)
	(RegistryParser._parseComponent): Add support for parsing
	<synchronization>.
	(RegistryEntryComponent.getNeedsSynchronization) 
	(RegistryEntryComponent.getClockPriority): New accessors.