@@ -1,3 +1,8 @@
+2005-12-12  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/feedcomponent.py:
+	  I was getting annoyed by a misspeld variable name.
+
 2005-12-07  Andy Wingo  <wingo@pobox.com>
 
 	* conf/managers/default/planet.xml: Update config syntax.
